--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+k2hdkc-dbaas-override-conf (0.9.1) trusty; urgency=low
+
+  * Changed subprocess run user from current to k2hdkc - #1
+
+ -- Takeshi Nakatani <ggtakec@gmail.com>  Mon, 01 Feb 2021 16:23:03 +0900
+
 k2hdkc-dbaas-override-conf (0.9.0) trusty; urgency=low
 
   * First version
