--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+k2hdkc-dbaas-override-conf (0.9.3) trusty; urgency=low
+
+  * Updated override.conf for k2hdkc.service and README.md - #5
+
+ -- Takeshi Nakatani <ggtakec@gmail.com>  Wed, 03 Feb 2021 21:21:44 +0900
+
 k2hdkc-dbaas-override-conf (0.9.2) trusty; urgency=low
 
   * Updated override.conf file - #3
