--- a/ChangeLog
+++ b/ChangeLog
@@ -1,40 +1,40 @@
-k2hdkc-dbaas-override-conf (1.0.2) trusty; urgency=low
+k2hdkc-dbaas-override-conf (1.0.2) unstable; urgency=low
 
   * Updated README.md for launch K2HDKC DBaaS K8S CLI - #11
 
  -- Takeshi Nakatani <ggtakec@gmail.com>  Thu, 30 Sep 2021 13:24:31 +0900
 
-k2hdkc-dbaas-override-conf (1.0.1) trusty; urgency=low
+k2hdkc-dbaas-override-conf (1.0.1) unstable; urgency=low
 
   * Added post install process for process execution user - #9
 
  -- Takeshi Nakatani <ggtakec@gmail.com>  Fri, 12 Mar 2021 20:21:37 +0900
 
-k2hdkc-dbaas-override-conf (1.0.0) trusty; urgency=low
+k2hdkc-dbaas-override-conf (1.0.0) unstable; urgency=low
 
   * Updated README and README.md for stable release - #7
 
  -- Takeshi Nakatani <ggtakec@gmail.com>  Fri, 05 Feb 2021 15:53:29 +0900
 
-k2hdkc-dbaas-override-conf (0.9.3) trusty; urgency=low
+k2hdkc-dbaas-override-conf (0.9.3) unstable; urgency=low
 
   * Updated override.conf for k2hdkc.service and README.md - #5
 
  -- Takeshi Nakatani <ggtakec@gmail.com>  Wed, 03 Feb 2021 21:21:44 +0900
 
-k2hdkc-dbaas-override-conf (0.9.2) trusty; urgency=low
+k2hdkc-dbaas-override-conf (0.9.2) unstable; urgency=low
 
   * Updated override.conf file - #3
 
  -- Takeshi Nakatani <ggtakec@gmail.com>  Tue, 02 Feb 2021 20:31:38 +0900
 
-k2hdkc-dbaas-override-conf (0.9.1) trusty; urgency=low
+k2hdkc-dbaas-override-conf (0.9.1) unstable; urgency=low
 
   * Changed subprocess run user from current to k2hdkc - #1
 
  -- Takeshi Nakatani <ggtakec@gmail.com>  Mon, 01 Feb 2021 16:23:03 +0900
 
-k2hdkc-dbaas-override-conf (0.9.0) trusty; urgency=low
+k2hdkc-dbaas-override-conf (0.9.0) unstable; urgency=low
 
   * First version
 
