--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+k2hdkc-dbaas-override-conf (1.0.7) unstable; urgency=low
+
+  * Updated build_helper.sh for fixing a bug and installing ruby - #33
+
+ -- Takeshi Nakatani <ggtakec@gmail.com>  Mon, 20 Nov 2023 10:07:02 +0900
+
 k2hdkc-dbaas-override-conf (1.0.6) unstable; urgency=low
 
   * Changed support OS (fedora and ubuntu) and updated tool - #31
