--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+k2hdkc-dbaas-override-conf (1.0.9) unstable; urgency=low
+
+  * Changed supported OS and modified some codes - #37
+
+ -- Takeshi Nakatani <ggtakec@gmail.com>  Thu, 14 Nov 2024 13:34:06 +0900
+
 k2hdkc-dbaas-override-conf (1.0.8) unstable; urgency=low
 
   * Changed support OS, etc - #35
