--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+k2hdkc-dbaas-override-conf (1.0.10) unstable; urgency=low
+
+  * Changed support OSes and Fixed scripts, etc - #39
+
+ -- Takeshi Nakatani <ggtakec@gmail.com>  Fri, 07 Feb 2025 20:59:03 +0900
+
 k2hdkc-dbaas-override-conf (1.0.9) unstable; urgency=low
 
   * Changed supported OS and modified some codes - #37
