--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+k2hdkc-dbaas-override-conf (1.0.11) unstable; urgency=low
+
+  * Changed support OS and Updated codes/mail addresses - #41
+
+ -- Takeshi Nakatani <ggtakec@gmail.com>  Thu, 16 Oct 2025 11:42:45 +0900
+
 k2hdkc-dbaas-override-conf (1.0.10) unstable; urgency=low
 
   * Changed support OSes and Fixed scripts, etc - #39
